[tool.poetry]
name = "worldwidenews"
version = "0.1.0"
description = "fetches the news from around the world"
authors = ["hugo evers"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.10"
pandas = "^1.3.1"
newspaper3k = "^0.2.8"
transformers = "^3.3.0"
bert-extractive-summarizer = "^0.7.1"
async-google-trans-new = "^1.4.2"
googlenews = {git = "https://github.com/hugocool/AsyncGoogleNews.git"} 
notion-client = "^0.5.0"
asyncio = "^3.4.3"
nest-asyncio = "^1.5.1"
requests = "^2.26.0"
plotly = "^5.1.0"
nltk = "^3.6.2"
Babel = "^2.9.1"
Flask = "^2.0.1"
pycountry = "^20.7.3"
numpy = "^1.21.1"
dash = "^1.21.0"
dash-core-components = "^1.17.1"
dash-html-components = "^1.1.4"
unsync = "^1.3.2"
backoff = "^1.11.1"
aiohttp = "^3.7.4"
SQLAlchemy = "^1.4.22"
loguru = "^0.5.3"
pydantic = {git = "https://github.com/PrettyWood/pydantic.git", rev = "field-property"}
pypopulation = "^2020.3"
funcy = "^1.16"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
nbdev = "^1.1.19"
pre-commit = "^2.13.0"
ipykernel = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
